--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Mrs-Caudle-s-Curtain-Lectures_6054
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Jerrold, Douglas William
@@ -13,6 +16,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1922
     wikipedia: http://en.wikipedia.org/wiki/Douglas_William_Jerrold
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/6054#Mrs-Caudle-s-Curtain-Lectures
 gutenberg_issued: '2004-07-01'
 gutenberg_type: Text
 identifiers:
